# Spruce

./: .gitignore  ChangeLog.md  README.md  hie.yaml  package.yaml  project-cis552.cabal  project-cis5520.cabal  stack.yaml
app/: Main.hs
ex/: foreach.bql
src/: BQLEvaluator.hs  BQLFunctions.hs  BQLParser.hs  BQLTypes.hs  Lib.hs  ParseLib.hs  SpruceEvaluator.hs  SpruceParser.hs  SpruceTypes.hs
test/: EvaluatorTests.hs  Main.hs  ParserTests.hs  Spec.hs
test/demo/: 01_types.bql  02_arrays.spr  04_badly_typed.bql  05_forkwait.spr  06_raceprint.bql  06_raceprint.spr  07_atomic.spr  08_recursive.bql  09_firstclassfuncs.bql  10_inline_func.spr  11_closures.bql  11_closures.spr  12_closures_array.bql  13_closures_array_inline.spr  1_types.bql  3_functions.bql  5_first_class.bql  5_forkwait.bql  6_race.bql  7_atomic.bql
test/programs/: badly_typed_arr.spr  global_local_naming_correct.spr  scoping_complex.spr
test/queries/: bad_scoping.bql  basic.spr  fib.bql  foreach.bql  global_local_naming_conflict.spr  memoized_fib.bql  memoized_fib.spr  nested_if.spr
